log/build_2026-03-26_10-31-44/green_vision/stderr.log
  File "/home/pi/ros2_ws/install/green_vision/lib/python3.10/site-packages/green_vision/green_vision.py", line 78
    self.get_logger().error(fjkkk"Failed to process image: {e}")
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

